<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgPlaylistItemBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:adjustViewBounds="true"
        android:maxHeight="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/bg_map2" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_logo"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/et_login_email"
        android:layout_marginTop="10dp"
        android:layout_width="300dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_above="@id/et_login_password"
        android:textSize="25sp"
        android:hint="@string/et_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/et_login_password"
        android:layout_marginBottom="80dp"
        android:layout_width="300dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_above="@id/b_fragment_login_login"
        android:textSize="25sp"
        android:hint="@string/et_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />

    <Button
        android:id="@+id/b_fragment_login_login"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#373737"
        android:textColor="#ffdf2c"
        android:text="@string/b_login"
        android:textAllCaps="false"
        android:textSize="25sp" />


</RelativeLayout>