<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgPlaylistItemBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:adjustViewBounds="true"
        android:maxHeight="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/bg_map2" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_logo"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/b_login"
        android:text="@string/b_login"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_above="@+id/tv_or"
        android:backgroundTint="#373737"
        android:textColor="#ffdf2c"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp" />
        <!--style="@style/Base.Widget.AppCompat.Button.Colored"-->

    <TextView
        android:id="@+id/tv_or"
        android:text="@string/et_or"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/b_register"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"/>

    <View
        android:id="@+id/SplitLine_or_left"
        android:layout_width="match_parent"
        android:layout_height= "3dp"
        android:layout_toLeftOf="@id/tv_or"
        android:layout_marginLeft="30dp"
        android:layout_above="@id/b_register"
        android:background="@color/design_default_color_primary_dark"
        android:layout_marginBottom="23dp" />

    <View
        android:id="@+id/SplitLine_or_right"
        android:layout_width="match_parent"
        android:layout_height= "3dp"
        android:layout_marginRight="30dp"
        android:layout_toRightOf="@id/tv_or"
        android:layout_above="@id/b_register"
        android:background="@color/design_default_color_primary_dark"
        android:layout_marginBottom="23dp" />

    <Button
        android:id="@+id/b_register"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="#373737"
        android:textColor="#ffdf2c"
        android:layout_marginBottom="90dp"
        android:text="@string/b_register"
        android:textAllCaps="false"
        android:textSize="25sp" />

</RelativeLayout>