<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.building.info.BuildingInfoFragment">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_building"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                android:src="@drawable/zuiderpark" />

            <ImageButton
                android:id="@+id/ib_close"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:layout_margin="5dp"
                android:background="@drawable/round_button"
                android:scaleType="fitXY"
                android:src="@drawable/ic_close_black_24dp" />

            <ImageButton
                android:id="@+id/ib_favorite_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_margin="5dp"
                android:background="@null"
                android:scaleType="fitXY"
                android:src="@drawable/ic_favorite_black_24dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Sportcampus Zuiderpark"
                android:textAlignment="center"
                android:textSize="40sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/tv_streetInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Meester P. Droogleever Fortuynweg 22, 2533 SR Den Haag"
                android:textAlignment="center"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/bt_show_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/show_building" />

            <Button
                android:id="@+id/bt_rate_building"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rate_building" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friends_visited"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/ib_planRoute"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@null"
                android:scaleType="fitXY"
                android:src="@drawable/plan_route" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>